# brain-im

./: CMakeLists.txt  README.md
base/: AccountParameterModel  AccountParameterModel.cpp  AccountParameterModel.hpp  AccountsModel  AccountsModel.cpp  AccountsModel.hpp  CMakeLists.txt  ConnectionManagersModel.cpp  ConnectionManagersModel.hpp  DBusServiceHelper.cpp  DBusServiceHelper.hpp  Entity.cpp  Entity.hpp  Event.hpp  ProtocolsModel.hpp  Types.hpp
examples/qmlclient/: CMakeLists.txt  main.cpp  qml.qrc
examples/qmlclient/qml/: main.qml
examples/qmlclient/qml/pages/: AccountManagement.qml  IndexPage.qml  MainView.qml
extras/: add-as-telepathy-example.sh
qml/: CMakeLists.txt  main.cpp  main.qml
qml/components/: AccountEditor.qml  ScrollablePage.qml
qml/pages/: AccountManagement.qml  IndexPage.qml
qml/pages/accounts/: AccountEditor.qml  AccountView.qml  ConnectionManagerView.qml  ProtocolView.qml
src/brain-im/: AccountManager.cpp  AccountManager.hpp  AccountParameterModel.cpp  AccountParameterModel.hpp  AccountsModel.cpp  AccountsModel.hpp  Approver.hpp  CMakeLists.txt  ConnectionManagersModel  ConnectionManagersModel.cpp  ConnectionManagersModel.hpp  ContactsModel  ContactsModel.cpp  ContactsModel.hpp  Core.cpp  Core.hpp  DBusServiceHelper  DBusServiceHelper.hpp  DialogsModel.cpp  DialogsModel.hpp  Event.hpp  MessagesModel.cpp  MessagesModel.hpp  PeersModel.cpp  PeersModel.hpp  ProtocolsModel  ProtocolsModel.cpp  ProtocolsModel.hpp  TelepathyContactsModel.cpp  TelepathyContactsModel.hpp  TelepathyMessagesModel.cpp  TelepathyMessagesModel.hpp  Types.hpp  global.h
src/brain-im/BrainIM/: AccountManager
src/imports/: AccountEditor.qml  AccountView.qml  CMakeLists.txt  DeclarativeAccountsModel.hpp  DialogDelegate.qml  DialogView.qml  MessageDelegate.qml  MessageEditor.qml  MessageToolbar.qml  MessageView.qml  ProtocolView.qml  ServiceMessageDelegate.qml  plugin.cpp  plugins.qmltypes  qmldir
src/imports/BrainControls/: CMakeLists.txt  ColumnLayout.qml  ListView.qml  RowLayout.qml  plugin.cpp  plugins.qmltypes  qmldir
src/imports/BrainIM/: AccountDelegate.qml  AccountEditor.qml  AccountView.qml  CMakeLists.txt  ConnectionManagerView.qml  DeclarativeAccountsModel.cpp  plugin.cpp  qmldir
